fix: Wrong color value

--- a/src/design/public.less
+++ b/src/design/public.less
@@ -17,15 +17,15 @@
 // }
 
 ::-webkit-scrollbar-track {
-  background-color: rgb(0 0 0 / 5%);
+  background-color: #0000000d;
 }
 
 ::-webkit-scrollbar-thumb {
   // background-color: rgba(144, 147, 153, 0.3);
   border-radius: 2px;
   // background: rgba(0, 0, 0, 0.6);
-  background-color: rgb(144 147 153 / 30%);
-  box-shadow: inset 0 0 6px rgb(0 0 0 / 20%);
+  background-color: #9093994d;
+  box-shadow: inset 0 0 6px #00000033;
 }
 
 ::-webkit-scrollbar-thumb:hover {
